GMOインターネットを追加

--- a/情報・通信業.md
+++ b/情報・通信業.md
@@ -1,3 +1,4 @@
 | 企業名 | 掲載日(yyyy-MM-dd) | リモート導入状況 | 
 | ----- | ----------------- | ------------- |
 |株式会社リクルートホールディングス| 2020-04-08 | 全社導入 |
+|GMOインターネット株式会社|2020-04-08|全社導入|
